--- a/gin_demo/config/db.conf
+++ b/gin_demo/config/db.conf
@@ -1,3 +1,4 @@
+create database gin_demo;
 drop table if exists t_user;
 CREATE TABLE `t_user` (
   `id` int NOT NULL AUTO_INCREMENT COMMENT '自增序号',
