--- a/gin_demo/config/db.conf
+++ b/gin_demo/config/db.conf
@@ -9,11 +9,12 @@ CREATE TABLE `t_user` (
   `age` int DEFAULT NULL COMMENT '年龄',
   `mobile` varchar(16) DEFAULT NULL COMMENT '电话',
   `sex` varchar(4) DEFAULT NULL COMMENT '性别',
+  `passwd` varchar(128) DEFAULT NULL COMMENT '性别',
   `create_time` datetime DEFAULT NULL COMMENT '创建时间',
   `update_time` datetime DEFAULT NULL ON UPDATE CURRENT_TIMESTAMP COMMENT '更新时间',
   PRIMARY KEY (`id`) USING BTREE
 ) ENGINE=InnoDB AUTO_INCREMENT=2 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci COMMENT='用户属性'
-insert into t_user (username, address, age, mobile, sex, passwd) values ('test', '北京昌平', 30, '12345677', 'fe', '543216');
+insert into t_user (username, address, age, mobile, sex, passwd) values ('admin', '北京海淀', 30, '12345677', 'fe', '123456');
 
 # 查询信息
 CREATE TABLE `t_user_detail` (
