--- a/gin_demo/config/db.conf
+++ b/gin_demo/config/db.conf
@@ -33,3 +33,34 @@ CREATE TABLE `t_user_detail` (
 insert into t_user_detail (username, province, city, address, code, detail, create_time) values ('阿里巴巴', '浙江', '杭州', ' 杭州西湖公寓', '310052', '让天下没有难做的生意', '2020-05-02 11:00:00');
 insert into t_user_detail (username, province, city, address, code, detail, create_time) values ('腾讯', '广东', '深圳', ' 深圳南山区', '410052', '通过互联网服务提升人类生活品质', '2020-05-02 14:00:00');
 insert into t_user_detail (username, province, city, address, code, detail, create_time) values ('百度', '北京', '海淀', ' 中国北京海淀区上地十街10号百度大厦', '310052', '用科技让复杂的世界更简单', '2020-05-02 15:00:00');
+
+
+# 系统配置表 给vue的sysdemocreate使用
+DROP TABLE IF EXISTS `sys_dict_type`;
+CREATE TABLE `sys_dict_type` (
+  `dict_id` int(11) NOT NULL AUTO_INCREMENT COMMENT '字典编号',
+  `dict_name` varchar(128) DEFAULT NULL COMMENT '字典名称',
+  `dict_type` varchar(128) DEFAULT NULL COMMENT '字典类型',
+  `status` varchar(8) DEFAULT NULL COMMENT '状态',
+  `data_scope` varchar(255) DEFAULT NULL,
+  `params` varchar(255) DEFAULT NULL,
+  `create_by` varchar(64) DEFAULT NULL COMMENT '创建者',
+  `create_time` datetime DEFAULT NULL COMMENT '创建时间',
+  `update_by` varchar(64) DEFAULT NULL COMMENT '更新者',
+  `update_time` datetime DEFAULT NULL COMMENT '更新时间',
+  `remark` varchar(255) DEFAULT NULL COMMENT '备注',
+  `is_del` int(1) DEFAULT NULL,
+  PRIMARY KEY (`dict_id`) USING BTREE
+) ENGINE=InnoDB AUTO_INCREMENT=12 DEFAULT CHARSET=utf8mb4;
+
+INSERT INTO `sys_dict_type` VALUES (1, '系统开关', 'sys_normal_disable', '0', '', '', '1', '2020-02-28 19:44:30', '1', '2020-04-07 23:21:00', '系统开关列表', 0);
+INSERT INTO `sys_dict_type` VALUES (2, '用户性别', 'sys_user_sex', '0', '', '', '1', '2020-02-28 21:12:04', '', '2020-03-08 23:11:15', '用户性别列表', 0);
+INSERT INTO `sys_dict_type` VALUES (3, '菜单状态', 'sys_show_hide', '0', '', '', '1', '2020-02-28 21:13:08', '', '2020-03-08 23:11:15', '菜单状态列表', 0);
+INSERT INTO `sys_dict_type` VALUES (4, '系统是否', 'sys_yes_no', '0', '', '', '1', '2020-02-28 21:13:34', '', '2020-03-08 23:11:15', '系统是否列表', 0);
+INSERT INTO `sys_dict_type` VALUES (5, '任务状态', 'sys_job_status', '0', '', '', '1', '2020-02-28 21:13:58', '', '2020-03-08 23:11:15', '任务状态列表', 0);
+INSERT INTO `sys_dict_type` VALUES (6, '任务分组', 'sys_job_group', '0', '', '', '1', '2020-02-28 21:14:20', '', '2020-03-08 23:11:15', '任务分组列表', 0);
+INSERT INTO `sys_dict_type` VALUES (7, '通知类型', 'sys_notice_type', '0', '', '', '1', '2020-02-28 21:14:48', '', '2020-03-08 23:11:15', '通知类型列表', 0);
+INSERT INTO `sys_dict_type` VALUES (8, '系统状态', 'sys_common_status', '0', '', '', '1', '2020-02-28 21:15:35', '', '2020-03-08 23:11:15', '登录状态列表', 0);
+INSERT INTO `sys_dict_type` VALUES (9, '操作类型', 'sys_oper_type', '0', '', '', '1', '2020-02-28 21:16:00', '', '2020-03-08 23:11:15', '操作类型列表', 0);
+INSERT INTO `sys_dict_type` VALUES (10, '通知状态', 'sys_notice_status', '0', '', '', '1', '2020-02-28 21:16:31', '', '2020-03-08 23:11:15', '通知状态列表', 0);
+INSERT INTO `sys_dict_type` VALUES (11, '1', '1', '1', NULL, '', '1', '2020-04-07 23:21:26', '1', '2020-04-07 23:21:32', '1', 1);
