--- a/gin_demo/config/db.conf
+++ b/gin_demo/config/db.conf
@@ -33,6 +33,9 @@ CREATE TABLE `t_user_detail` (
 insert into t_user_detail (username, province, city, address, code, detail, create_time) values ('阿里巴巴', '浙江', '杭州', ' 杭州西湖公寓', '310052', '让天下没有难做的生意', '2020-05-02 11:00:00');
 insert into t_user_detail (username, province, city, address, code, detail, create_time) values ('腾讯', '广东', '深圳', ' 深圳南山区', '410052', '通过互联网服务提升人类生活品质', '2020-05-02 14:00:00');
 insert into t_user_detail (username, province, city, address, code, detail, create_time) values ('百度', '北京', '海淀', ' 中国北京海淀区上地十街10号百度大厦', '310052', '用科技让复杂的世界更简单', '2020-05-02 15:00:00');
+insert into t_user_detail (username, province, city, address, code, detail, create_time) values ('滴滴', '北京', '海淀', ' 北京市海淀区软件园二号路数字山谷', '310052', '共享出行', '2020-04-29 15:00:00');
+insert into t_user_detail (username, province, city, address, code, detail, create_time) values ('字节跳动', '北京', '海淀', ' 北京市海淀区知春路甲48号2号楼10A室', '310052', '信息创造价值', '2020-04-29 15:00:00');
+insert into t_user_detail (username, province, city, address, code, detail, create_time) values ('快手', '北京', '海淀', ' 北京市海淀区知春路甲48号2号楼10A室', '310052', '后厂村路与', '2020-04-29 15:00:00');
 
 
 # 系统配置表 给vue的sysdemocreate使用
