为飞飞新增图片浏览功能

--- a/gin_demo/config/db.conf
+++ b/gin_demo/config/db.conf
@@ -67,3 +67,26 @@ INSERT INTO `sys_dict_type` VALUES (8, '系统状态', 'sys_common_status', '0',
 INSERT INTO `sys_dict_type` VALUES (9, '操作类型', 'sys_oper_type', '0', '', '', '1', '2020-02-28 21:16:00', '', '2020-03-08 23:11:15', '操作类型列表', 0);
 INSERT INTO `sys_dict_type` VALUES (10, '通知状态', 'sys_notice_status', '0', '', '', '1', '2020-02-28 21:16:31', '', '2020-03-08 23:11:15', '通知状态列表', 0);
 INSERT INTO `sys_dict_type` VALUES (11, '1', '1', '1', NULL, '', '1', '2020-04-07 23:21:26', '1', '2020-04-07 23:21:32', '1', 1);
+
+
+
+# 图片库 给vue的图片列表系统使用
+DROP TABLE IF EXISTS `pic_sys`;
+CREATE TABLE `pic_sys` (
+  `pic_id` int(11) NOT NULL AUTO_INCREMENT COMMENT '图片编号',
+  `pic_name` varchar(128) DEFAULT NULL COMMENT '图片名称',
+  `pic_size` int(11) NOT NULL COMMENT '图片大小', 
+  `Percentage` int(11) NOT NULL COMMENT '图片百分比',
+  `status` varchar(32) NOT NULL COMMENT '图片状态',
+  `uid` BIGINT NOT NULL COMMENT '图片UID',
+  `create_by` varchar(64) DEFAULT NULL COMMENT '创建者',
+  `create_time` datetime DEFAULT NULL COMMENT '创建时间',
+  `update_by` varchar(64) DEFAULT NULL COMMENT '更新者',
+  `update_time` datetime DEFAULT NULL COMMENT '更新时间',
+  `url` varchar(255) NOT NULL COMMENT '图片上传后的URL',
+  `is_del` int(4) DEFAULT NULL COMMENT '是否删除',
+  PRIMARY KEY (`pic_id`) USING BTREE
+) ENGINE=InnoDB AUTO_INCREMENT=0 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci
+
+insert into pic_sys values (1, 'pic1', 12345, 0, '0', 1111111111, 'lw', '2020-05-03 21:16:31', 'lw', '2020-05-04 21:16:31','https://fuss10.elemecdn.com/8/27/f01c15bb73e1ef3793e64e6b7bbccjpeg.jpeg', '0');
+insert into pic_sys values (2, 'pic2', 22345, 0, '0', 2222222222, 'lw', '2020-05-03 21:16:31', 'lw', '2020-05-04 21:16:31','https://fuss10.elemecdn.com/1/8e/aeffeb4de74e2fde4bd74fc7b4486jpeg.jpeg', '0');
