--- a/gin_demo/config/db.conf
+++ b/gin_demo/config/db.conf
@@ -13,7 +13,7 @@ CREATE TABLE `t_user` (
   `create_time` datetime DEFAULT NULL COMMENT '创建时间',
   `update_time` datetime DEFAULT NULL ON UPDATE CURRENT_TIMESTAMP COMMENT '更新时间',
   PRIMARY KEY (`id`) USING BTREE
-) ENGINE=InnoDB AUTO_INCREMENT=2 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci COMMENT='用户属性'
+) ENGINE=InnoDB AUTO_INCREMENT=0 DEFAULT CHARSET=utf8 COMMENT='用户属性'
 insert into t_user (username, address, age, mobile, sex, passwd) values ('admin', '北京海淀', 30, '12345677', 'fe', '123456');
 
 # 查询信息
@@ -28,7 +28,7 @@ CREATE TABLE `t_user_detail` (
   `create_time` datetime DEFAULT NULL COMMENT '创建时间',
   `update_time` datetime DEFAULT NULL ON UPDATE CURRENT_TIMESTAMP COMMENT '更新时间',
   PRIMARY KEY (`id`) USING BTREE
-) ENGINE=InnoDB AUTO_INCREMENT=0 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci COMMENT='信息详情'
+) ENGINE=InnoDB AUTO_INCREMENT=0 DEFAULT CHARSET=utf8 COMMENT='信息详情'
 
 insert into t_user_detail (username, province, city, address, code, detail, create_time) values ('阿里巴巴', '浙江', '杭州', ' 杭州西湖公寓', '310052', '让天下没有难做的生意', '2020-05-02 11:00:00');
 insert into t_user_detail (username, province, city, address, code, detail, create_time) values ('腾讯', '广东', '深圳', ' 深圳南山区', '410052', '通过互联网服务提升人类生活品质', '2020-05-02 14:00:00');
@@ -54,7 +54,7 @@ CREATE TABLE `sys_dict_type` (
   `remark` varchar(255) DEFAULT NULL COMMENT '备注',
   `is_del` int(1) DEFAULT NULL,
   PRIMARY KEY (`dict_id`) USING BTREE
-) ENGINE=InnoDB AUTO_INCREMENT=12 DEFAULT CHARSET=utf8mb4;
+) ENGINE=InnoDB AUTO_INCREMENT=0 DEFAULT CHARSET=utf8 COMMENT='系统配置表'
 
 INSERT INTO `sys_dict_type` VALUES (1, '系统开关', 'sys_normal_disable', '0', '', '', '1', '2020-02-28 19:44:30', '1', '2020-04-07 23:21:00', '系统开关列表', 0);
 INSERT INTO `sys_dict_type` VALUES (2, '用户性别', 'sys_user_sex', '0', '', '', '1', '2020-02-28 21:12:04', '', '2020-03-08 23:11:15', '用户性别列表', 0);
@@ -86,7 +86,7 @@ CREATE TABLE `pic_sys` (
   `url` varchar(255) NOT NULL COMMENT '图片上传后的URL',
   `is_del` int(4) DEFAULT NULL COMMENT '是否删除',
   PRIMARY KEY (`pic_id`) USING BTREE
-) ENGINE=InnoDB AUTO_INCREMENT=0 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci
+) ENGINE=InnoDB AUTO_INCREMENT=0 DEFAULT CHARSET=utf8 COMMENT='图片配置'
 
 insert into pic_sys values (1, 'pic1', 12345, 0, '0', 1111111111, 'lw', '2020-05-03 21:16:31', 'lw', '2020-05-04 21:16:31','https://fuss10.elemecdn.com/8/27/f01c15bb73e1ef3793e64e6b7bbccjpeg.jpeg', '0');
 insert into pic_sys values (2, 'pic2', 22345, 0, '0', 2222222222, 'lw', '2020-05-03 21:16:31', 'lw', '2020-05-04 21:16:31','https://fuss10.elemecdn.com/1/8e/aeffeb4de74e2fde4bd74fc7b4486jpeg.jpeg', '0');
